# OpenMontage

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Config.md  HANDOFF.md  Makefile  README.md  main.py  package-lock.json  project-notes.md  pyproject.toml  requirements-dev.txt  requirements.txt  youtube-shorts.sh
.agents/skills/synthetic-screen-recording/: SKILL.md
.claude/skills/ai-video-gen/: SKILL.md
.tickets/: Ope-lnxy.md  Ope-lq0u.md  Ope-oqbu.md  Ope-pgcl.md
Design-Docs/: Blissful-Chants-4min-Template.md  Blissful-Chants-Strategy.md  Blissful-Chants.md  Blissful-Strategy.md  Competitor-Analysis.md  DrawThings-Guide.md  Omni-Flow.md  Shiva-Crow-Replication-Analysis.md  Shorts-Pipeline-Guide.md
Design-Docs/Competitors/: Competitor-Analysis.md
Design-Docs/ToPublish/: Design-Changes.md
docs/: ARCHITECTURE.md  PROVIDERS.md
lib/: package_bootstrap.py  shorts_workflow.py
remotion-composer/: SCENE_TYPES.md  package-lock.json  package.json
remotion-composer/src/: CinematicRenderer.tsx  Explainer.tsx  Root.tsx  TalkingHead.tsx
skills/: INDEX.md
skills/meta/: onboarding.md  shorts-package-spruce.md  shorts-workflow.md  video-reference-analyst.md
styles/: blissful-chants.yaml
tests/: test_package_bootstrap.py  test_shorts_workflow.py  test_voiceover_timeline.py
tools/: tool_registry.py
tools/analysis/: transcriber.py
tools/audio/: piper_tts.py
tools/ingest/: screen_to_script.py
tools/video/: apply_voiceover_timeline.py  export_screen_script.py  render_cleanup.py  seedance_replicate.py  sora_video.py  sync_scene_beats.py  video_compose.py
(+19 files in other folders)
