[project]
name = "openmontage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.20",
    "numpy>=1.26",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "faster-whisper>=1.2",
]
