[project]
name = "openmontage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.20",
    "numpy>=1.26",
    "pillow>=10.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "pyyaml>=6.0",
    "easyocr>=1.7.2",
    "deep-translator>=1.11.4",
    "pytesseract>=0.3.13",
    "anthropic>=0.97.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "faster-whisper>=1.2",
]
gpu = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchvision>=0.15",
    "diffusers>=0.27",
    "transformers>=4.40",
    "accelerate>=0.30",
]
tts = [
    "piper-tts",
]
